--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>My First Heading </h1>
-
-<p>Test</p>
-
+<a href="./newDoc.html"> Click </a>
 </body>
 </html>
